src/styles.scss
:root {
    font-family: "Roboto", sans-serif;

    --button-height: 3.6rem;
    --button-padding: 0 2rem;
    --input-height: 3.6rem;
    --input-padding: 0 2rem;

    router-outlet + * {
        display: block;
        animation: fade 1s;
    }

    .hand {
        cursor: pointer;
    }

    .prime-card {
        padding-top: 0;
        width: 280px;
    }

    .description {
        max-width: 800px;
    }

    .table {
        th,
        tr,
        td {
            border: none !important;
            padding: 0;
        }
    }

    @keyframes fade {
        0% {
            opacity: 0;
        }
        100% {
            opacity: 1;
        }
    }
}

